# parallax

./: CMakeLists.txt  README.md
assets/: shader.frag  shader.vert
src/: ContextGLFW.cpp  ContextGLFW.hpp  ContextInfo.hpp  ParallaxBackground.cpp  ParallaxBackground.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  main.cpp  stb_image.h
